# stress-detection-streamlit

./: .gitignore  README.md  app_main.py  pyproject.toml  requiremets.txt  utils_app.py
pages/: 🦙chatbot.py
