[project]
name = "stress-detection-streamlit"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Francisco", email = "frankj.mortiz@gmail.com"},
]
dependencies = [
    "streamlit>=1.34.0",
    "groq>=0.5.0",
    "python-dotenv>=1.0.1",
    "ipykernel>=6.29.4",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
